trunk/Archive2/7b/c8210762f03a1d/output
main.cpp: In constructor 'Task::Task(Task::FunctionPointer, void*)':
main.cpp:13:62: error: anachronistic old-style base class initializer [-fpermissive]
     Task(FunctionPointer fptr, void* storage) : fptr_(fptr), (storage)   // typo, should be `storage_(storage)`
                                                              ^
main.cpp:13:60: error: unnamed initializer for 'Task', which has no base classes
     Task(FunctionPointer fptr, void* storage) : fptr_(fptr), (storage)   // typo, should be `storage_(storage)`
                                                            ^
